tagging system implemented

--- a/templates/post.html
+++ b/templates/post.html
@@ -9,6 +9,9 @@
             <span class="importance">Importance: $importance$</span>
             $endif$
             <span class="date">Created: $date$</span>
+            <div class="tags">
+                Tags: $tags$
+            </div>
         </div>
     </header>
 
