--- a/templates/default.html
+++ b/templates/default.html
@@ -117,7 +117,7 @@
                 <div class="nav-links">
                     <a href="/about">About</a>
                     <a href="/archive">Archive</a>
-                    <a href="/tags">Tags</a>
+                    <a href="/tags/index.html">Tags</a>
                 </div>
             </div>
         </nav>
